--- a/$.html
+++ b/$.html
@@ -379,7 +379,7 @@ Killa.lol/$
 <img src="https://discord.c99.nl/widget/theme-4/1000022273673138226.png" style="
 width: 300px;"></a>
 <div class="footer">
-    <h4>@Killa<a href="https://killa.lol/"style="display: inline-block; text-shadow: 0px 1px 1px ;font-family: 'PF Tempesta Five', sans-serif; color: #fff; text-align: center; background-image: url('https://media.discordapp.net/attachments/1067132384492933131/1067429877243981855/sparkle_rainbow.gif');">CONVICTED</h1></b></a></h4>
+    <h4><a href="https://killa.lol/"style="display: inline-block; text-shadow: 0px 1px 1px ;font-family: 'PF Tempesta Five', sans-serif; color: #fff; text-align: center; background-image: url('https://media.discordapp.net/attachments/1067132384492933131/1067429877243981855/sparkle_rainbow.gif');">Killa.lol</h1>
 </div>
 <script defer src="https://static.cloudflareinsights.com/beacon.min.js/vaafb692b2aea4879b33c060e79fe94621666317369993" integrity="sha512-0ahDYl866UMhKuYcW078ScMalXqtFJggm7TmlUtp0UlD4eQk0Ixfnm5ykXKvGJNFjLMoortdseTfsRT8oCfgGA==" data-cf-beacon='{"rayId":"78e256b2ceadbab1","version":"2022.11.3","r":1,"token":"5ed95a16178041949f27faf49d27d54e","si":100}' crossorigin="anonymous"></script>
 </body>
