--- a/$.html
+++ b/$.html
@@ -10,6 +10,10 @@
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="killa.lol *Convicted" property="og:title"/>
     <meta content="website" property="og:type"/>
+    <link href="https://fonts.cdnfonts.com/css/common-pixel" rel="stylesheet">
+    <style>@import url('https://fonts.cdnfonts.com/css/common-pixel');</style>
+    <link href="https://fonts.cdnfonts.com/css/pf-tempesta-five" rel="stylesheet">
+    <style>@import url('https://fonts.cdnfonts.com/css/pf-tempesta-five');</style>
     <meta content="https://killa.lol/" property="og:url"/>
     <meta content="{avatar_url}" property="og:image"/>
     <meta content="Convicted's Social links and profile." property="og:description"/>
@@ -71,7 +75,7 @@
         float: left;
         margin: 0 5px;
         overflow: hidden;
-        background: rgb(111, 111, 111);
+        background: rgb(71, 123, 255);
         border-radius: 51px;
         cursor: pointer;
         box-shadow: 0px 10px 10px rgb(0, 0, 0);
@@ -125,75 +129,75 @@
     */
 
     .wrapper .button.discord:hover .icon {
-        background: #5865F2;
+        background: #4353ff;
     }
 
     .wrapper .button.discord span {
-        color: #5865F2;
+        color: #4353ff;
     }
 
     .wrapper .button.github:hover .icon {
-        background: #333;
+        background: #4353ff;
     }
 
     .wrapper .button.github span {
-        color: #333;
+        color: #4353ff;
     }
 
     .wrapper .button.tiktok:hover .icon {
-        background: #000000;
+        background: #4353ff;
     }
 
     .wrapper .button.tiktok span {
-        color: #000000;
+        color: #4353ff;
     }
 
     .wrapper .button.youtube:hover .icon {
-        background: #c4302b;
+        background: #4353ff;
     }
 
     .wrapper .button.youtube span {
-        color: #c4302b;
+        color: #4353ff;
     }
 
     .wrapper .button.twitch:hover .icon {
-        background: #6441a5;
+        background: #4353ff;
     }
 
     .wrapper .button.twitch span {
-        color: #6441a5;
+        color: #4353ff;
     }
 
     .wrapper .button.twitter:hover .icon {
-        background: #00acee;
+        background: #4353ff;
     }
 
     .wrapper .button.twitter span {
-        color: #00acee;
+        color: #4353ff;
     }
 
     .wrapper .button.snapchat:hover .icon {
-        background: #FFFC00;
+        background: #4353ff;
     }
 
     .wrapper .button.snapchat span {
-        color: #FFFC00;
+        color: #4353ff;
     }
 
     .wrapper .button.steam:hover .icon {
-        background: #1b2838;
+        background: #4353ff;
     }
 
     .wrapper .button.steam span {
-        color: #1b2838;
+        color: #4353ff;
     }
 
     .wrapper .button.instagram:hover .icon {
-        background: #C13584;
+        background: #4353ff;
     }
 
     .wrapper .button.instagram span {
-        color: #C13584;
+        color: #4353ff;
     }
 
     .wrapper .button.facebook:hover .icon {
@@ -201,47 +205,47 @@
     }
 
     .wrapper .button.facebook span {
-        color: #4267B2;
+        color: #4353ff
     }
 
     .wrapper .button.spotify:hover .icon {
-        background: #1DB954;
+        background: #4353ff;
     }
 
     .wrapper .button.spotify span {
-        color: #1DB954;
+        color: #4353ff;
     }
 
     .wrapper .button.reddit:hover .icon {
-        background: #FF5700;
+        background: #4353ff;
     }
 
     .wrapper .button.reddit span {
-        color: #FF5700;
+        color: #4353ff;
     }
 
     .wrapper .button.soundcloud:hover .icon {
-        background: #ff5500;
+        background: #4353ff;
     }
 
     .wrapper .button.soundcloud span {
-        color: #ff5500;
+        color: #4353ff;
     }
 
     .wrapper .button.pinterest:hover .icon {
-        background: #cc0000;
+        background: #4353ff;
     }
 
     .wrapper .button.pinterest span {
-        color: #cc0000;
+        color: #4353ff;
     }
 
     .wrapper .button:hover .icon {
-        background: #4078c0;
+        background: #4353ff;
     }
 
     .wrapper .button span {
-        color: #4078c0;
+        color: #4353ff;
     }
 
     .badge {
@@ -293,12 +297,12 @@
         cursor: pointer;
     }
 </style>
-<body style="background-image: url('https://media.discordapp.net/attachments/1004849202507038804/1061448055376838778/IMG_4142.gif'); background-size: cover;">
+<body style="background-image: url('https://cdn.discordapp.com/attachments/1067991981340495912/1068257788503007323/fa44413ef069b57641f62f0b9a78cc51.png'); background-size: cover;">
 <div class="title">
 <div class="title-img">
-<center><img alt="Avatar" class="avatar" style="position: center;" src="https://cdn.discordapp.com/attachments/1062346448752095293/1067142225236078622/65eb8a6b4a8966bafd26d1dee21ed97f.gif">
-<center><h1 class="owner" style="display: inline-block; text-shadow: 0px 1px 1px ;font-family: 'PF Tempesta Five', sans-serif; color: #fff; text-align: center; background-image: url('https://media.discordapp.net/attachments/1067132384492933131/1067429877243981855/sparkle_rainbow.gif');">CONVICTED</h1>
-<center><p class="quote" style="color: #ffffff">
+<center><img alt="Avatar" class="avatar" style="position: center;" src="https://cdn.discordapp.com/attachments/1067991981340495912/1068257710199554158/9ff815cb7266c4a2ccdd17404f214174.png">
+<center><h1 class="owner" style="display: inline-block; text-shadow: 0px 1px 1px ;font-family: 'PF Tempesta Five', sans-serif; color: rgb(171, 201, 255); text-align: center; background-image: url('https://media.discordapp.net/attachments/1067132384492933131/1067429877243981855/sparkle_rainbow.gif');">CONVICTED</h1>
+<center><p class="quote" style="color: rgb(71, 123, 255)">
 Killa.lol/$
 </p>  
                                   </div>
@@ -352,7 +356,7 @@ Killa.lol/$
                                     <span class="badge-tooltiptext">Doxbin</span>
                                   </div>
                                   
-    <center><p class="quote" style="color: #ffffff">
+    <center><p class="quote" style="color: rgb(71, 123, 255)">
         Convicted#0024
     </p>
 </div>
