--- a/$.html
+++ b/$.html
@@ -75,7 +75,7 @@
         float: left;
         margin: 0 5px;
         overflow: hidden;
-        background: rgb(71, 123, 255);
+        background: rgb(56, 56, 56);
         border-radius: 51px;
         cursor: pointer;
         box-shadow: 0px 10px 10px rgb(0, 0, 0);
@@ -301,7 +301,7 @@
 <div class="title">
 <div class="title-img">
 <center><img alt="Avatar" class="avatar" style="position: center;" src="https://cdn.discordapp.com/attachments/1067991981340495912/1068265543267778600/ODA4MTAxOTU5NDM.png">
-<center><h1 class="owner" style="display: inline-block; text-shadow: 0px 1px 1px ;font-family: 'PF Tempesta Five', sans-serif; color: rgb(255, 255, 255); text-align: center; background-image: url('https://media.discordapp.net/attachments/1067132384492933131/1067429875717263380/sparkle_black.gif');">ボタン</h1>
+<center><h1 class="owner" style="display: inline-block; text-shadow: 0px 1px 1px ;font-family: 'PF Tempesta Five', sans-serif; color: rgb(63, 63, 63); text-align: center; background-image: url('https://cdn.discordapp.com/attachments/987149728800198686/991834200309248070/sparkle.gif');">ボタン</h1>
 <center><p class="quote" style="color: rgb(255, 255, 255)">
 Killa.lol/$
 </p>  
@@ -356,7 +356,7 @@ Killa.lol/$
                                     <span class="badge-tooltiptext">Doxbin</span>
                                   </div>
                                   
-    <center><p class="quote" style="color: rgb(71, 123, 255)">
+    <center><p class="quote" style="color: #545454">
         Convicted#0024
     </p>
 </div>
@@ -383,7 +383,7 @@ Killa.lol/$
 <img src="https://discord.c99.nl/widget/theme-4/1000022273673138226.png" style="
 width: 300px;"></a>
 <div class="footer">
-    <h4><a href="https://killa.lol/"style="display: inline-block; text-shadow: 0px 1px 1px ;font-family: 'PF Tempesta Five', sans-serif; color: #fff; text-align: center; background-image: url('https://media.discordapp.net/attachments/1067132384492933131/1067429875717263380/sparkle_black.gif');">KILLA.LOL</h1>
+    <h4><a href="https://killa.lol/"style="display: inline-block; text-shadow: 0px 1px 1px ;font-family: 'PF Tempesta Five', sans-serif; color: #545454; text-align: center; background-image: url('https://media.discordapp.net/attachments/1067132384492933131/1067429875717263380/sparkle_black.gif');">KILLA.LOL</h1>
 </div>
 <script defer src="https://static.cloudflareinsights.com/beacon.min.js/vaafb692b2aea4879b33c060e79fe94621666317369993" integrity="sha512-0ahDYl866UMhKuYcW078ScMalXqtFJggm7TmlUtp0UlD4eQk0Ixfnm5ykXKvGJNFjLMoortdseTfsRT8oCfgGA==" data-cf-beacon='{"rayId":"78e256b2ceadbab1","version":"2022.11.3","r":1,"token":"5ed95a16178041949f27faf49d27d54e","si":100}' crossorigin="anonymous"></script>
 </body>
