--- a/$.html
+++ b/$.html
@@ -301,7 +301,7 @@
 <div class="title">
 <div class="title-img">
 <center><img alt="Avatar" class="avatar" style="position: center;" src="https://cdn.discordapp.com/attachments/1067991981340495912/1068265543267778600/ODA4MTAxOTU5NDM.png">
-<center><h1 class="owner" style="display: inline-block; text-shadow: 0px 1px 1px ;font-family: 'PF Tempesta Five', sans-serif; color: rgb(63, 63, 63); text-align: center; background-image: url('https://cdn.discordapp.com/attachments/987149728800198686/991834200309248070/sparkle.gif');">ボタン</h1>
+<center><h1 class="owner" style="display: inline-block; text-shadow: 0px 1px 1px ;font-family: 'PF Tempesta Five', sans-serif; color: rgb(255, 255, 255); text-align: center; background-image: url('https://cdn.discordapp.com/attachments/987149728800198686/991834200309248070/sparkle.gif');">ボタン</h1>
 <center><p class="quote" style="color: rgb(255, 255, 255)">
 Killa.lol/$
 </p>  
@@ -318,7 +318,7 @@ Killa.lol/$
 								  </div>
                                   
                                   
-    <center><p class="quote" style="color: #545454">
+    <center><p class="quote" style="color: #ffffff">
         Convicted#0024
     </p>
 </div>
