--- a/$.html
+++ b/$.html
@@ -299,10 +299,10 @@
 </style>
 <body style="background-image: url('https://cdn.discordapp.com/attachments/1067991981340495912/1068265794011660399/5TT8XbjVV.png'); background-size: cover;">
 <div class="title">
-<div class="title-img">
-<center><img alt="Avatar" class="avatar" style="position: center;" src="https://cdn.discordapp.com/attachments/1067991981340495912/1068265543267778600/ODA4MTAxOTU5NDM.png">
-<center><h1 class="owner" style="display: inline-block; text-shadow: 0px 1px 1px ;font-family: 'PF Tempesta Five', sans-serif; color: rgb(255, 255, 255); text-align: center; background-image: url('https://cdn.discordapp.com/attachments/987149728800198686/991834200309248070/sparkle.gif');">ボタン</h1>
-<center><p class="quote" style="color: rgb(255, 255, 255)">
+<div class="title-img"><center>
+<center><img alt="Avatar" class="avatar" style="position: center;" src="https://cdn.discordapp.com/attachments/1067991981340495912/1068265543267778600/ODA4MTAxOTU5NDM.png"><center><
+<center><h1 class="owner" style="display: inline-block; text-shadow: 0px 1px 1px ;font-family: 'PF Tempesta Five', sans-serif; color: rgb(255, 255, 255); text-align: center; background-image: url('https://cdn.discordapp.com/attachments/987149728800198686/991834200309248070/sparkle.gif');">ボタン</h1><center>
+<center><p class="quote" style="color: rgb(255, 255, 255)"><center>
 Killa.lol/$
 </p>  
                                   </div>
