--- a/$.html
+++ b/$.html
@@ -48,18 +48,8 @@
         margin-top: 5px;
     }
 
-    .avatar {
-        border: 5px solid #23272A;
-        height: 200px;
-        width: 200px;
-        object-fit: cover;
-        border-radius: 50%;
-        position: relative;
-        left: 10px;
-    }
-
     .status {
-        background-color: #23272A;
+        background-color: #606060;
         padding: 5px;
         border-radius: 38px;
         z-index: 1;
