--- a/$.html
+++ b/$.html
@@ -22,32 +22,36 @@
     <link rel="icon" href="https://cdn.discordapp.com/attachments/1066410151327846410/1066733748378415145/stole20ts.png" type="image/gif" sizes="16x16">
 </head>
 <style>
-    @import url('https://fonts.googleapis.com/css?family=Poppins:400,500,600,700&display=swap');
-
-    * {
-        margin: 0;
-        padding: 0;
-        box-sizing: border-box;
-        font-family: 'Poppins', sans-serif;
-    }
-
-    html,
-    body {
-        display: grid;
-        height: 100%;
-        width: 100%;
-        place-items: center;
-        {background_placeholder}
-    }
-
-    .title {
-        text-align: center;
-    }
-
-    .title .quote {
-        margin-top: 5px;
-    }
-
+	@import url('//fonts.googleapis.com/css?family=Poppins:400,500,600,700&display=swap');
+	* {
+		margin: 0;
+		padding: 0;
+		box-sizing: border-box;
+		font-family: 'Poppins', sans-serif;
+	}
+	html,
+	body {
+		display: grid;
+		height: 100%;
+		width: 100%;
+		place-items: center;
+		background: linear-gradient(315deg, rgb(255, 255, 255) 0%, rgb(235, 235, 235) 74%);
+	}
+	.title {
+		text-align: center;
+	}
+	.title .quote {
+		margin-top: 7px;
+	}
+	.avatar {
+		border: 0px solid #808080;
+		height: 200px;
+		width: 200px;
+		object-fit: cover;
+		border-radius: 50%;
+		position: center;
+		left: 10px;
+	}
     .status {
         background-color: #606060;
         padding: 5px;
@@ -290,7 +294,7 @@
 <body style="background-image: url('https://cdn.discordapp.com/attachments/1067991981340495912/1068265794011660399/5TT8XbjVV.png'); background-size: cover;">
 <div class="title">
 <div class="title-img"><center>
-<center><img alt="Avatar" class="avatar" style="position: center;" src="https://cdn.discordapp.com/attachments/1067991981340495912/1068265543267778600/ODA4MTAxOTU5NDM.png"><center>
+<center><img alt="Avatar" class="avatar" style="position: center;" src="https://cdn.discordapp.com/attachments/1067991981340495912/1068265543267778600/ODA4MTAxOTU5NDM.png"><center><
 <center><h1 class="owner" style="display: inline-block; text-shadow: 0px 1px 1px ;font-family: 'PF Tempesta Five', sans-serif; color: rgb(255, 255, 255); text-align: center; background-image: url('https://cdn.discordapp.com/attachments/987149728800198686/991834200309248070/sparkle.gif');">ボタン</h1><center>
 <center><p class="quote" style="color: rgb(255, 255, 255)"><center>
 Killa.lol/$
