--- a/$.html
+++ b/$.html
@@ -291,7 +291,7 @@
         cursor: pointer;
     }
 </style>
-<body style="background-image: url('https://cdn.discordapp.com/attachments/1067991981340495912/1068270968134439013/killabannerdiamond1.png'); background-size: cover;">
+<body style="background-image: url('https://cdn.discordapp.com/attachments/996991884880773131/1064261518079832084/5jSRGHL.jpg'); background-size: cover;">
 <div class="title">
 <div class="title-img">
 <center><img alt="Avatar" class="avatar" style="position: center;" src="https://cdn.discordapp.com/attachments/1067991981340495912/1068265543267778600/ODA4MTAxOTU5NDM.png">
