--- a/$.html
+++ b/$.html
@@ -291,10 +291,10 @@
         cursor: pointer;
     }
 </style>
-<body style="background-image: url('https://cdn.discordapp.com/attachments/996991884880773131/1064261518079832084/5jSRGHL.jpg'); background-size: cover;">
+<body style="background-image: url('https://media.discordapp.net/attachments/1004849202507038804/1061444613019283627/IMG_4136.gif'); background-size: cover;">
 <div class="title">
 <div class="title-img">
-<center><img alt="Avatar" class="avatar" style="position: center;" src="https://cdn.discordapp.com/attachments/1067991981340495912/1068265543267778600/ODA4MTAxOTU5NDM.png">
+<center><img alt="Avatar" class="avatar" style="position: center;" src="https://cdn.discordapp.com/attachments/1067991981340495912/1068273133838139462/5SdRLmns5.png">
 <center><h1 class="owner" style="display: inline-block; text-shadow: 0px 1px 1px ;font-family: 'PF Tempesta Five', sans-serif; color: rgb(255, 255, 255); text-align: center; background-image: url('https://cdn.discordapp.com/attachments/987149728800198686/991834200309248070/sparkle.gif');">مدان</h1>
 <center><p class="quote" style="color: rgb(255, 255, 255)">
 Killa.lol/$
