--- a/1337.html
+++ b/1337.html
@@ -358,16 +358,16 @@ Killa.lol/1337
 </div>
 <div class="wrapper">
 
-						  <div class="button github" onclick="window.open('https://www.roblox.com/users/1317669874/profile', '_blank');">
+						  <div class="button other" onclick="window.open('https://www.roblox.com/users/1317669874/profile', '_blank');">
 							<div class="icon">
-								<i class="fas fa-github"></i>
+								<i class="fas fa-link"></i>
 							</div>
 							<span>Roblox</span>
 						  </div>
 						
-						  <div class="button discord" onclick="window.open('https://github.com/1aylol', '_blank');">
+						  <div class="button github" onclick="window.open('https://github.com/1aylol', '_blank');">
 							<div class="icon">
-								<i class="fab fa-discord"></i>
+								<i class="fab fa-github"></i>
 							</div>
 							<span>Github</span>
 						  </div>
