--- a/@.html
+++ b/@.html
@@ -366,6 +366,11 @@ Killa.lol/@
                                     <img src="https://cdn.discordapp.com/emojis/1051876319090192424.gif?size=80&quality=lossless" style="width: 20px; height: 20px;" alt="Bitcoin">
                                     <span class="badge-tooltiptext">Doxbin</span>
                                   </div>
+
+                                  <div class="badge">
+                                    <img src="https://cdn.discordapp.com/emojis/1027084051720458260.gif?size=80&quality=lossless" style="width: 20px; height: 20px;" alt="Bitcoin">
+                                    <span class="badge-tooltiptext">Scythe "CUSTOM"</span>
+                                  </div>
     <center><p class="quote" style="color: #ffffff">
         glhf#0001
     </p>
