--- a/@.html
+++ b/@.html
@@ -369,7 +369,7 @@ Killa.lol/@
 
                                   <div class="badge">
                                     <img src="https://cdn.discordapp.com/emojis/1027084051720458260.gif?size=80&quality=lossless" style="width: 20px; height: 20px;" alt="Bitcoin">
-                                    <span class="badge-tooltiptext">Scythe "CUSTOM"</span>
+                                    <span class="badge-tooltiptext">GLHF</span>
                                   </div>
     <center><p class="quote" style="color: #ffffff">
         glhf#0001
