--- a/$.html
+++ b/$.html
@@ -69,7 +69,7 @@
         float: left;
         margin: 0 5px;
         overflow: hidden;
-        background: rgb(56, 56, 56);
+        background: rgb(135, 167, 250);
         border-radius: 51px;
         cursor: pointer;
         box-shadow: 0px 10px 10px rgb(0, 0, 0);
@@ -291,12 +291,12 @@
         cursor: pointer;
     }
 </style>
-<body style="background-image: url('https://media.discordapp.net/attachments/1004849202507038804/1061444613019283627/IMG_4136.gif'); background-size: cover;">
+<body style="background-image: url('https://i.imgur.com/HriDCVJ.gif'); background-size: cover;">
 <div class="title">
 <div class="title-img">
-<center><img alt="Avatar" class="avatar" style="position: center;" src="https://cdn.discordapp.com/attachments/1067991981340495912/1068273133838139462/5SdRLmns5.png">
-<center><h1 class="owner" style="display: inline-block; text-shadow: 0px 1px 1px ;font-family: 'PF Tempesta Five', sans-serif; color: rgb(255, 255, 255); text-align: center; background-image: url('https://cdn.discordapp.com/attachments/987149728800198686/991834200309248070/sparkle.gif');">مدان</h1>
-<center><p class="quote" style="color: rgb(255, 255, 255)">
+<center><img alt="Avatar" class="avatar" style="position: center;" src="https://i.imgur.com/tGPjawq.gif">
+<center><h1 class="owner" style="display: inline-block; text-shadow: 0px 1px 1px ;font-family: 'PF Tempesta Five', sans-serif; color: rgb(135, 167, 250); text-align: center; background-image: url('https://media.discordapp.net/attachments/1067132384492933131/1067429876048605294/sparkle_blue.gif');">مدان</h1>
+<center><p class="quote" style="color: rgb(135, 167, 250)">
 Killa.lol/$
 </p>  
                                   </div>
@@ -312,7 +312,7 @@ Killa.lol/$
 								  </div>
                                   
                                   
-    <center><p class="quote" style="color: #ffffff">
+    <center><p class="quote" style="color: rgb(135, 167, 250)">
 Killa en la parte superior
     </p>
 </div>
