--- a/testing.html
+++ b/testing.html
@@ -1,3 +1,258 @@
 
-<!DOCTYPE html><html lang="en"> <head><meta charset="UTF-8"><meta http-equiv="X-UA-Compatible" content="IE=edge"><meta name="viewport" content="width=device-width, initial-scale=1.0"><link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" rel="stylesheet"><link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins"><link rel="stylesheet" href="styles/style.css"><link rel="icon" href="https://dose.lol/static/logos/logo_clr.png"><meta content="@v" property="og:title"><meta content="Killa.lol/$" property="og:description"><meta content="https://dose.lol/v" property="og:url"><meta name="twitter:card" content="summary_large_image"><meta name="twitter:image:src" content="https://media.discordapp.net/attachments/975129514499772516/1043299818845524050/ezgif-1-a0183746f5.png"><meta name="theme-color" content="#551A8B"><title>dose - @v</title><meta name="description" content="Click to view @v's page! Get your own page at dose.lol"><meta name="keywords" content="dose.lol, dose, v, v bio, v info, description, bio link, bio, description link, linktree, easy bio, bio maker, page maker, bio page, description page, dose bio page, dose bio, niggas in paris, niggas in paris bio, solo.to, feds.lol, dark.bio, dose.lol, niggas.paris, rich.rip, link in bio, lnk.bio, linktr.ee"><script nonce="bbd4aade-6031-4d14-8489-ce75d4e6398d">(function(w,d){!function(f,g,h,i){f[h]=f[h]||{};f[h].executed=[];f.zaraz={deferred:[],listeners:[]};f.zaraz.q=[];f.zaraz._f=function(j){return function(){var k=Array.prototype.slice.call(arguments);f.zaraz.q.push({m:j,a:k})}};for(const l of["track","set","debug"])f.zaraz[l]=f.zaraz._f(l);f.zaraz.init=()=>{var m=g.getElementsByTagName(i)[0],n=g.createElement(i),o=g.getElementsByTagName("title")[0];o&&(f[h].t=g.getElementsByTagName("title")[0].text);f[h].x=Math.random();f[h].w=f.screen.width;f[h].h=f.screen.height;f[h].j=f.innerHeight;f[h].e=f.innerWidth;f[h].l=f.location.href;f[h].r=g.referrer;f[h].k=f.screen.colorDepth;f[h].n=g.characterSet;f[h].o=(new Date).getTimezoneOffset();if(f.dataLayer)for(const s of Object.entries(Object.entries(dataLayer).reduce(((t,u)=>({...t[1],...u[1]})))))zaraz.set(s[0],s[1],{scope:"page"});f[h].q=[];for(;f.zaraz.q.length;){const v=f.zaraz.q.shift();f[h].q.push(v)}n.defer=!0;for(const w of[localStorage,sessionStorage])Object.keys(w||{}).filter((y=>y.startsWith("_zaraz_"))).forEach((x=>{try{f[h]["z_"+x.slice(7)]=JSON.parse(w.getItem(x))}catch{f[h]["z_"+x.slice(7)]=w.getItem(x)}}));n.referrerPolicy="origin";n.src="/ventryshield/contents.js?z="+btoa(encodeURIComponent(JSON.stringify(f[h])));m.parentNode.insertBefore(n,m)};["complete","interactive"].includes(g.readyState)?zaraz.init():f.addEventListener("DOMContentLoaded",zaraz.init)}(w,d,"zarazData","script");})(window,document);</script></head> <body> <style>.username{font-family:hacka}.username{color:#cce3ff}.bio-text{color:#cce3ff}.social-icons{color:#cce3ff}.btn-link{color:#cce3ff}.btn-link{background-color:#252446}body{background-color:#0d0d0e;background:url(https://i.imgur.com/HriDCVJ.gif)no-repeat center center fixed;background-size:cover}</style> <div class> <div class="center"> <div class="container"> <img class="pfp-image" style="border: 0px solid #1f202038;" src="https://i.imgur.com/tGPjawq.gif" alt="pfp"> <p class="username">killjvke </p> <p class style="margin-top: 9px;"> <img class="badgeunder" style="padding: 0px 2px;" src="https://media.discordapp.net/attachments/975129514499772516/1051465324832227348/image.png" title="staff"> <img class="badgeunder" style="padding: 0px 2px;" src="https://media.discordapp.net/attachments/975129514499772516/1044273567380013166/8925-blurple-verified.png" title="verified"> <img class="badgeunder" style="padding: 0px 2px;" src="https://media.discordapp.net/attachments/975129514499772516/1037405730904494182/1005719603026079835.png" title="partner"> <img class="badgeunder" style="padding: 0px 2px;" src="https://media.discordapp.net/attachments/975129514499772516/1037755591172567090/contributor.jpg" title="tier_1_donor"> <img class="badgeunder" style="padding: 0px 2px;" src="https://media.discordapp.net/attachments/1017757427023741008/1038818154102652958/unknown.png" title="bug_hunter"> <img class="badgeunder" style="padding: 0px 2px;" src="https://media.discordapp.net/attachments/975129514499772516/1036653479508312094/eth.png" title="ethereum"> </p> <p class="bio-text">inquiries - <a href="/cdn-cgi/l/email-protection" class="__cf_email__" data-cfemail="c3f5f5f583a7b1b6a4a2a1b6edb0a6">[email&#160;protected]</a></p> <div class="socials"> <div class="tooltip"><a target="_blank" href="https://open.spotify.com/artist/73lECwhw9oaeFuOYnKd18t"><span class="tooltiptext">Spotify</span><i class="fa-brands fa-spotify social-icons"></i></a></div> <div class="tooltip"><a target="_blank" href="https://instagram.com/killjvke"><span class="tooltiptext">Instagram</span><i class="fa-brands fa-instagram social-icons"></i></a></div> <div class="tooltip"><a target="_blank" href="https://soundcloud.com/killjvke"><span class="tooltiptext">Soundcloud</span><i class="fa-brands fa-soundcloud social-icons"></i></a></div> <div class="tooltip"><a target="_blank" href="https://music.apple.com/us/artist/killjvke/1655940820"><span class="tooltiptext">Apple Music</span><i class="fa-brands fa-apple social-icons"></i></a></div> <div class="tooltip"><a target="_blank" href="https://twitch.com/wzvw"><span class="tooltiptext">twitch</span><i class="fa-brands fa-twitch social-icons"></i></a></div> </div> <iframe scrolling="no" class="spotifys" style="border-radius:12px;" src="/api/spotify?color=191023&track=0DxEQzJV8Eyd1oeithFNAT?si=1a8f07f9dead4410" width="97%" height="80" frameborder="0" allowfullscreen allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe> <a target="_blank" href="https://booking.appointy.com/killjvke"><button style="border-radius: 30px" class="btn-link" type="button">bookings</button></a> </div> </div> </div> <script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script><script src="/static/pagecopy.js"></script> <script defer src="https://static.cloudflareinsights.com/beacon.min.js/vaafb692b2aea4879b33c060e79fe94621666317369993" integrity="sha512-0ahDYl866UMhKuYcW078ScMalXqtFJggm7TmlUtp0UlD4eQk0Ixfnm5ykXKvGJNFjLMoortdseTfsRT8oCfgGA==" data-cf-beacon='{"rayId":"78ff5a815b80bae2","token":"033c33a962e74d16be982c1223e03590","version":"2022.11.3","si":100}' crossorigin="anonymous"></script>
-</body> <a href="https://dose.lol"><p class="mark">dose.lol</p></a> </html>
+
+<!DOCTYPE html>
+<html lang="en" theme="White">
+<head>
+<meta charset="utf-8">
+<title>dizzy (@keta) · feds.lol</title>
+<meta property="og:title" content="dizzy (@keta) · feds.lol">
+<meta name="description" content="dizzy">
+<meta property="og:description" content="dizzy">
+<meta name="twitter:card" content="summary">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<meta name="theme-color" content="#2F3136">
+<link href="../assets/images/verified.svg" rel="shortcut icon" type="image/x-icon">
+<meta name="twitter:card" content="summary">
+<link rel="preload" href="https://feds.lol/module/newww/css/app.css" as="style">
+<link rel="stylesheet" href="https://feds.lol/module/newww/main.css">
+<link href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css" rel="stylesheet">
+<link href="assets/vendors/animation/animate.css" rel="stylesheet">
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+<link href="assets/vendors/animation/animate.css" rel="stylesheet">
+<script src="./script.js" data-site="IHGLANPG" defer></script>
+<script nonce="e06fd873-c6b5-46b6-a8b4-0462119725ae">(function(w,d){!function(f,g,h,i){f[h]=f[h]||{};f[h].executed=[];f.zaraz={deferred:[],listeners:[]};f.zaraz.q=[];f.zaraz._f=function(j){return function(){var k=Array.prototype.slice.call(arguments);f.zaraz.q.push({m:j,a:k})}};for(const l of["track","set","debug"])f.zaraz[l]=f.zaraz._f(l);f.zaraz.init=()=>{var m=g.getElementsByTagName(i)[0],n=g.createElement(i),o=g.getElementsByTagName("title")[0];o&&(f[h].t=g.getElementsByTagName("title")[0].text);f[h].x=Math.random();f[h].w=f.screen.width;f[h].h=f.screen.height;f[h].j=f.innerHeight;f[h].e=f.innerWidth;f[h].l=f.location.href;f[h].r=g.referrer;f[h].k=f.screen.colorDepth;f[h].n=g.characterSet;f[h].o=(new Date).getTimezoneOffset();if(f.dataLayer)for(const s of Object.entries(Object.entries(dataLayer).reduce(((t,u)=>({...t[1],...u[1]})))))zaraz.set(s[0],s[1],{scope:"page"});f[h].q=[];for(;f.zaraz.q.length;){const v=f.zaraz.q.shift();f[h].q.push(v)}n.defer=!0;for(const w of[localStorage,sessionStorage])Object.keys(w||{}).filter((y=>y.startsWith("_zaraz_"))).forEach((x=>{try{f[h]["z_"+x.slice(7)]=JSON.parse(w.getItem(x))}catch{f[h]["z_"+x.slice(7)]=w.getItem(x)}}));n.referrerPolicy="origin";n.src="/ventryshield/contents.js?z="+btoa(encodeURIComponent(JSON.stringify(f[h])));m.parentNode.insertBefore(n,m)};["complete","interactive"].includes(g.readyState)?zaraz.init():f.addEventListener("DOMContentLoaded",zaraz.init)}(w,d,"zarazData","script");})(window,document);</script></head>
+<body class="fedslol">
+<script>
+
+var TxtType = function (el, toRotate, period) {
+  this.toRotate = toRotate;
+  this.el = el;
+  this.loopNum = 0;
+  this.period = parseInt(period, 10) || 2000;
+  this.txt = "";
+  this.tick();
+  this.isDeleting = false;
+};
+
+TxtType.prototype.tick = function () {
+  var i = this.loopNum % this.toRotate.length;
+  var fullTxt = this.toRotate[i];
+
+  if (this.isDeleting) {
+    this.txt = fullTxt.substring(0, this.txt.length - 1);
+  } else {
+    this.txt = fullTxt.substring(0, this.txt.length + 1);
+  }
+
+  this.el.innerHTML = '<span class="wrap">' + this.txt + "</span>";
+
+  var that = this;
+  var delta = 200 - Math.random() * 100;
+
+  if (this.isDeleting) {
+    delta /= 2;
+  }
+
+  if (!this.isDeleting && this.txt === fullTxt) {
+    delta = this.period;
+    this.isDeleting = true;
+  } else if (this.isDeleting && this.txt === "") {
+    this.isDeleting = false;
+    this.loopNum++;
+    delta = 500;
+  }
+
+  setTimeout(function () {
+    that.tick();
+  }, delta);
+};
+
+window.onload = function () {
+  var elements = document.getElementsByClassName("typewrite");
+  for (var i = 0; i < elements.length; i++) {
+    var toRotate = elements[i].getAttribute("data-type");
+    var period = elements[i].getAttribute("data-period");
+    if (toRotate) {
+      new TxtType(elements[i], JSON.parse(toRotate), period);
+    }
+  }
+  // INJECT CSS
+  var css = document.createElement("style");
+  css.type = "text/css";
+  css.innerHTML = ".typewrite > .wrap { border-right: 0.08em solid #fff}";
+  document.body.appendChild(css);
+};
+
+
+</script>
+<style>
+	.max-w-\[1100px\] {
+	
+		width:500px
+	}
+		</style>
+<main style="">
+<div class="fixed w-full h-full" style="background-image:linear-gradient(rgba(0, 0, 0, 0.60), rgba(0, 0, 0, 0.60)),url('https://feds.ventryshield.net/?url=https://i.pinimg.com/originals/1e/04/4a/1e044a15f78be12843005fd1abfb73bc.gif'); background-position: center;background-repeat: no-repeat;background-size: cover;background-attachment: fixed; background-position: center;"></div>
+<style>
+
+
+.click_anywhere {
+
+  margin: 0;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);	
+	
+}
+
+
+
+</style>
+<div class="clickanywhere premium_border">
+<div class="click_body" style="height:100%;width:100%;">
+<div class="click_anywhere">
+<h4 style="color:white;font-size:12pt;">[Click Anywhere]</h4>
+</div>
+<audio>
+<source src="https://cdn.discordapp.com/attachments/1066521063418245130/1066526769097748560/A.mp3" type="audio/mpeg">
+<source src="https://cdn.discordapp.com/attachments/1066521063418245130/1066526769097748560/A.mp3" type="audio/ogg">
+</audio>
+<div id="sounddiv"><bgsound id="sound"></div>
+</div>
+</div>
+<div class="biolink" style="display:none;height:100%;width:100%;">
+<div class="relative w-full h-full px-4 py-16 table">
+<div class="table-cell align-middle text-center">
+<div class="bg-main rounded-md shadow-4xl w-full mx-auto card animate-slide-up not-last-child:mb-12 max-w-[1100px] mt-14">
+<div class="p-10">
+<div class="not-last-child:mb-8">
+<div class="-mt-[85px]">
+<img class="w-44 h-44 rounded-full mx-auto shadow-avatar" src="https://feds.ventryshield.net/?url=https://cdn.discordapp.com/attachments/1013313256078721156/1066884618101469245/2e38c3b827f621c229061c119326c920.jpg" title="Image" alt="Image" draggable="false" /> </div>
+</div>
+<div class="not-last-child:mb-8">
+<div class="flex justify-center items-center space-x-2">
+<h2 class="text-[20px] text-white font-semibold" style="color: #fff; background-image: url('https://media.discordapp.net/attachments/987149728800198686/991834200309248070/sparkle.gif');filter: drop-shadow(8px 8px 10px #33eb00);color:#33eb00;">dizzy</h2>
+<span class="cursor-pointer text-xl" title="Verified">
+<div class="verified-icon"><img src="https://feds.lol/assets/images/verified.svg" class="verified-icon-image verified-icon-image-dark" style="position: relative; height: 15px; left: 15%;"></div>
+</span>
+<span class="cursor-pointer text-xl" title="Premium">
+<div class="premium"><img src="https://www.svgrepo.com/show/269443/diamond.svg" class="verified-icon-image verified-icon-image-dark" style="position: absoulute; height: 12px; left: 60%;"></div>
+</span>
+</div>
+<p class="text-sm">
+feds.lol/<em>keta</em>
+</p>
+<p class="text-sm">
+<i class="ri-eye-2-fill"></i>
+8278 </p>
+</div>
+<div class="not-last-child:mb-8">
+<div class="mx-auto max-w-[750px]">
+<p>
+<span class="typewrite" data-period="2000" data-type='[ "blueface baby, i am boss."]'>
+<span class="wrap"></span>
+</span>
+</p>
+</div>
+</div>
+<div class="flex justify-center items-center space-x-2">
+<div style="text-align: center;">
+<a href="https://discord.com/users/994414595978563604" target="_blank">
+<img src="https://discord.c99.nl/widget/theme-4/994414595978563604.png" style="
+    width: 300px;
+"></a>
+</div>
+</div>
+</div>
+</div>
+<div class="1w-full mx-auto card animate-slide-up not-last-child:mb-12 max-w-[1100px]">
+<center>
+<div class="1w-full mx-auto card animate-slide-up not-last-child:mb-12 max-w-[1100px] items-center justify-center">
+<div class="!p-0" style="max-width:1000px">
+<iframe style="width:400px; margin-bottom: 20px; margin-top:-20px" class="rounded-md w-full sm:w-3/6" src="https://open.spotify.com/embed/track/7D8tKs61tdzzDdG9w6kdu4?si=7020982a0fa043c6?&theme=0" height="80" frameBorder="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture">
+                        </iframe>
+</div>
+</div> </center>
+<div class="!p-0">
+<div class="flex flex-wrap justify-between gap-6">
+<a href="https://www.instagram.com/dizzy.asd" target="_blank" rel="noopener noreferrer nofollow" title="https://www.instagram.com/dizzy.asd" class="bg-main rounded-xl flex-[100%] sm:flex-[45%] animate-slide-up shadow-4xl p-3 button" style="will-change: opacity, transform">
+<div class="flex items-center justify-between space-x-6">
+<span class="bg-secondary rounded-xl aspect-square h-16 p-3 flex items-center justify-center">
+<img class="drop-shadow-instagram" src="https://feds.lol/module/newww/icons/instagram.svg">
+</span>
+<h2 class="w-full text-left text-grey">
+Instagram
+</h2>
+<span class="w-20" style="margin-left: 46px;">
+<img src="../assets/images/link-button-arrow.svg" style="width: 14px;" class="link-arrows">
+</span>
+</div>
+</a>
+<a href="https://www.discord.gg/1234" target="_blank" rel="noopener noreferrer nofollow" title="https://www.discord.gg/1234" class="bg-main rounded-xl flex-[100%] sm:flex-[45%] animate-slide-up shadow-4xl p-3 button" style="will-change: opacity, transform">
+<div class="flex items-center justify-between space-x-6">
+<span class="bg-secondary rounded-xl aspect-square h-16 p-3 flex items-center justify-center">
+<img class="drop-shadow-twitter" src="https://feds.lol/module/newww/icons/discord.svg">
+</span>
+<h2 class="w-full text-left text-grey">
+Discord
+</h2>
+<span class="w-20" style="margin-left: 46px;">
+<img src="../assets/images/link-button-arrow.svg" style="width: 14px;" class="link-arrows">
+</span>
+</div>
+</a>
+</div>
+</div>
+</div>
+</div>
+</div>
+</div>
+</main>
+<script src="/js/page.js?id=2c4f84bac56c0ce1881f"></script>
+<script>
+
+function playclip() {
+if (navigator.appName == "Microsoft Internet Explorer" && (navigator.appVersion.indexOf("MSIE 7")!=-1) || (navigator.appVersion.indexOf("MSIE 8")!=-1)) {
+if (document.all)
+ {
+  document.all.sound.src = "song.mp3";
+ }
+}
+
+else {
+{
+var audio = document.getElementsByTagName("audio")[0];
+audio.play();
+}
+}
+}
+
+document.querySelector('.fedslol').addEventListener('click', function() {
+  
+  playclip();
+});
+
+$(document).ready(function () {
+	$( document.body ).click(function() {
+	$(".clickanywhere").fadeOut(1000);
+    $(".biolink").fadeIn(1000);
+
+	let play = function(){document.getElementById("audio").play()}
+	
+	
+
+	
+	});
+});
+                       
+var _old = jQuery.Event.prototype.stopPropagation;
+
+jQuery.Event.prototype.stopPropagation = function() {
+    this.target.nodeName !== 'SPAN' && _old.apply( this, arguments );
+};             
+
+</script>
+<script defer src="https://static.cloudflareinsights.com/beacon.min.js/vaafb692b2aea4879b33c060e79fe94621666317369993" integrity="sha512-0ahDYl866UMhKuYcW078ScMalXqtFJggm7TmlUtp0UlD4eQk0Ixfnm5ykXKvGJNFjLMoortdseTfsRT8oCfgGA==" data-cf-beacon='{"rayId":"78ff8e7e3c2fee6f","token":"033c33a962e74d16be982c1223e03590","version":"2022.11.3","si":100}' crossorigin="anonymous"></script>
+</body>
+</html>
